@@ -26,6 +26,9 @@
 /**
  * criteria for selection of records represented as an object
  *
+ *
+ * !!! IMPORTANT: Do NOT use this class yet, still very experimental, doesn't work yet
+ *
  * @author	Ingo Renner <ingo@typo3.org>
  * @package TYPO3
  * @subpackage community
@@ -38,6 +41,7 @@ class tx_community_model_ModelCriteria {
 	const MODE_LESS_THAN_EQUAL = '<=';
 	const MODE_EQUAL = '=';
 	const MODE_LIKE = 'LIKE';
+	const MODE_IN = 'IN(';
 
 	protected $table;
 	protected $conditions;
@@ -46,17 +50,52 @@ class tx_community_model_ModelCriteria {
 	 * constructor for class tx_community_model_ModelCriteria
 	 */
 	public function __construct($tableName) {
+
+		if (!array_key_exists($tableName, $GLOBALS['TCA'])) {
+			throw new InvalidArgumentException(
+				'No table "'. $tableName . '" defined in TCA',
+				1221872321
+			);
+		}
+
 		$this->table = $tableName;
 
 		t3lib_div::loadTCA($tableName);
+		$GLOBALS['TSFE']->includeTCA();
 	}
 
-	public function add($column, $value, $mode = tx_community_model_ModelCriteria::MODE_EQUAL) {
+	public function add($column, $value, $mode = self::MODE_EQUAL) {
 		if (array_key_exists($column, $GLOBALS['TCA'][$this->table]['columns'])) {
-			$columnConfiguration = $GLOBALS['TCA'][$this->table]['columns'][$column];
+			$condition = $column . ' ' . $mode . ' ' . $value;
 
+			if ($mode == self::MODE_IN) {
+				$condition .= ')';
+			}
 
+			$this->conditions[] = array(
+				'condition' => $condition,
+				'mode' => 'AND'
+			);
 		}
+	}
+
+	public function addOr($column, $value, $mode = tx_community_model_ModelCriteria::MODE_EQUAL) {
+		if (array_key_exists($column, $GLOBALS['TCA'][$this->table]['columns'])) {
+			$condition = $column . ' ' . $mode . ' ' . $value;
+
+			if ($mode == self::MODE_IN) {
+				$condition .= ')';
+			}
+
+			$this->conditions[] = array(
+				'condition' => $condition,
+				'mode' => 'OR'
+			);
+		}
+	}
+
+	public function getCriteria() {
+		return $this->conditions;
 	}
 }
 
