@@ -2,6 +2,7 @@
 
 	* added initial scaffolding for a criteria class to work with conditions for selecting records in an object oriented way
 	* added initial code for the user profile search feature
+	* added "compilation" of a where clause from search parameters in the search application, depending on TS configuration
 
 2008-09-18 Ingo Renner  <ingo@typo3.org>
 
